--- a/UwbProjekt-Angular/src/app/app.component.html
+++ b/UwbProjekt-Angular/src/app/app.component.html
@@ -1,2 +1,31 @@
-<h1>Hello There :)</h1>
+<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+    <div class="container">
+        <a href="../" class="navbar-brand">Medi-Care</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav">
+                    <li class="nav-item">
+                            <a class="nav-link" href="../specs/">Specjalizacje</a>
+                        </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../help/">Kontakt</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="http://link">Nasi Lekarze</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="rout do rejestracji" target="_blank">Zarejestruj się</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="rout do logowania" target="_blank">Zaloguj się</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>      
 <router-outlet></router-outlet>
