--- a/UwbProjekt-Angular/src/app/app.component.html
+++ b/UwbProjekt-Angular/src/app/app.component.html
@@ -1,31 +1,16 @@
-<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-    <div class="container">
-        <a href="../" class="navbar-brand">Medi-Care</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav">
-                    <li class="nav-item">
-                            <a class="nav-link" href="../specs/">Specjalizacje</a>
-                        </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../help/">Kontakt</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://link">Nasi Lekarze</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="rout do rejestracji" target="_blank">Zarejestruj się</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="rout do logowania" target="_blank">Zaloguj się</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>      
+<nav class="navbar navbar-inverse bg-inverse">
+  <a class="navbar-brand" href="/#/">Medicare</a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="/#/">Home</a> 
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/#/search">Search</a>
+    </li>
+  </ul>
+</nav>
+<nav>
+    <a routerLink="/users">Users</a>
+</nav>
+
 <router-outlet></router-outlet>
