--- a/UwbProjekt-Angular/src/app/users/users.component.html
+++ b/UwbProjekt-Angular/src/app/users/users.component.html
@@ -1,3 +1,12 @@
-<p>
-  users works!
-</p>
+<h2>Users:</h2>
+<ul>
+  <li *ngFor="let user of users">
+<li>{{user.lastName}}</li>
+<li>{{user}}</li>
+  <tbody>
+      <tr *ngFor="let user of users">
+          <td>{{user.lastName}}</td>
+          <td></td>
+      </tr>
+  </tbody>
+</ul>
