--- a/UwbProjekt-Angular/src/app/app.component.html
+++ b/UwbProjekt-Angular/src/app/app.component.html
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="/#/">Medicare</a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="/#/">Home</a> 
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/#/search">Search</a>
-    </li>
-  </ul>
-</nav>
-<nav>
-    <a routerLink="/users">Users</a>
-</nav>
-
-<router-outlet></router-outlet>
++<nav class="navbar navbar-inverse bg-inverse">
+    +  <a class="navbar-brand" href="/#/">Medicare</a>
+    +  <ul class="nav navbar-nav">
+    +    <li class="nav-item active">
+    +      <a class="nav-link" href="/#/">Home</a> 
+    +    </li>
+    +    <li class="nav-item">
+    +      <a class="nav-link" href="/#/search">Search</a>
+    +    </li>
+    +  </ul>
+    +</nav>
+    +<nav>
+    +    <a routerLink="/users">Users</a>
+    +</nav>
+    +
+     <router-outlet></router-outlet>
