--- a/UwbProjekt-Angular/src/app/users/users.component.html
+++ b/UwbProjekt-Angular/src/app/users/users.component.html
@@ -1,12 +1,20 @@
-<h2>Users:</h2>
-<ul>
-  <li *ngFor="let user of users">
-<li>{{user.lastName}}</li>
-<li>{{user}}</li>
+<table class="table is-bordered is-striped is-narrow">
+  <thead class="thead">
+    <tr>
+      <th>Id</th>
+      <th>First name</th>
+      <th>Last name</th>
+      <th>Email</th>
+      <th>Admin</th>
+    </tr>
+  </thead>
   <tbody>
-      <tr *ngFor="let user of users">
-          <td>{{user.lastName}}</td>
-          <td></td>
-      </tr>
+    <tr *ngFor="let user of users">
+      <td>{{user.id}}</td>
+      <td>{{user.firstName}}</td>
+      <td>{{user.lastName}}</td>
+      <td>{{user.email}}</td>
+      <td>{{user.admin ? "Yes": "No"}}</td>
+    </tr>
   </tbody>
-</ul>
+</table>
