added doctors component

--- a/UwbProjekt-Angular/src/app/home/home.component.html
+++ b/UwbProjekt-Angular/src/app/home/home.component.html
@@ -14,10 +14,10 @@
                 </div>
                 <div id="navbarMenu" class="navbar-menu">
                     <div class="navbar-end">
-                        <a class="navbar-item">
+                        <a class="navbar-item" routerLink="" routerLinkActive="active">
                             Strona główna
                         </a>
-                        <a class="navbar-item">
+                        <a class="navbar-item" routerLink="/specs" routerLinkActive="active">
                             Specjalizacje
                         </a>
                         <a class="navbar-item" routerLink="/login" routerLinkActive="active">
