--- a/UwbProjekt-Angular/src/app/specs/specs.component.html
+++ b/UwbProjekt-Angular/src/app/specs/specs.component.html
@@ -1,3 +1,4 @@
+Under Maintance brodacz!
 <table>
   <thead class="thead">
     <tr>
@@ -7,8 +8,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let specs of specs">
-      <td>{{specs.id}}</td>
-      <td>{{specs.name}}</td>
+      <td>{{specs.specName}}</td>
     </tr>
   </tbody>
 </table>
