specDetails component + html template

--- a/UwbProjekt-Angular/src/app/doctors/doctors.component.html
+++ b/UwbProjekt-Angular/src/app/doctors/doctors.component.html
@@ -5,6 +5,7 @@
         <th>First name</th>
         <th>Last name</th>
         <th>Email</th>
+        <th>specName</th>
         <th>Admin</th>
       </tr>
     </thead>
@@ -14,7 +15,7 @@
         <td>{{doctor.firstName}}</td>
         <td>{{doctor.lastName}}</td>
         <td>{{doctor.email}}</td>
-        <td>{{doctor.specName}}</td>
+        <td>{{doctor.specId}}</td>
         <td>{{doctor.admin ? "Yes": "No"}}</td>
       </tr>
     </tbody>
