--- a/UwbProjekt-Angular/src/app/home/home.component.html
+++ b/UwbProjekt-Angular/src/app/home/home.component.html
@@ -3,27 +3,23 @@
         <nav class="navbar">
             <div class="container">
                 <div class="navbar-brand">
-                    <a class="navbar-item" href="../">
+                    <a class="navbar-item" routerLink="">
                         <img src="http://www.thecliniccolorado.com/wp-content/uploads/2016/02/The_Clinic_ReverseLogo_DarkBlue_Stroke.png" alt="Logo">
                     </a>
-                    <span class="navbar-burger burger" data-target="navbarMenu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </span>
+
                 </div>
                 <div id="navbarMenu" class="navbar-menu">
                     <div class="navbar-end">
                         <a class="navbar-item" routerLink="" routerLinkActive="active">
                             Strona główna
                         </a>
-                        <a class="navbar-item" routerLink="/specs" routerLinkActive="active">
+                        <a class="navbar-item" routerLink="/specdetails" routerLinkActive="active">
                             Specjalizacje
                         </a>
                         <a class="navbar-item" routerLink="/login" routerLinkActive="active">
                             Zaloguj się
                         </a>
-                        <a class="navbar-item" href="../">
+                        <a class="navbar-item" routerLink="">
                             Zarejestruj się
                         </a>
                     </div>
