--- a/UwbProjekt-Angular/src/app/specs/specs.component.html
+++ b/UwbProjekt-Angular/src/app/specs/specs.component.html
@@ -7,8 +7,9 @@ Under Maintance brodacz!
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let specs of specs">
-      <td>{{specs.specName}}</td>
+    <tr *ngFor="let spec of specs">
+        <td>{{spec.id}}</td>
+      <td>{{spec.name}}</td>
     </tr>
   </tbody>
 </table>
