added dynamic html generator by spec name to specs.html, switched specsdynamic <--> spec

--- a/UwbProjekt-Angular/src/app/header/header.component.html
+++ b/UwbProjekt-Angular/src/app/header/header.component.html
@@ -13,7 +13,7 @@
                       <a class="navbar-item" routerLink="" routerLinkActive="active">
                           Strona główna
                       </a>
-                      <a class="navbar-item" routerLink="/specdetails" routerLinkActive="active">
+                      <a class="navbar-item" routerLink="/specs" routerLinkActive="active">
                           Specjalizacje
                       </a>
                       <a class="navbar-item" routerLink="/login" routerLinkActive="active">
