--- a/UwbProjekt-Angular/src/app/specs/specs.component.html
+++ b/UwbProjekt-Angular/src/app/specs/specs.component.html
@@ -1,15 +1,41 @@
-Under Maintance brodacz!
-<table>
-  <thead class="thead">
-    <tr>
-      <th>Id</th>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let spec of specs">
-        <td>{{spec.id}}</td>
-      <td>{{spec.name}}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="box cta">
+  <div class="has-text-centered">
+  </div>
+</div>
+<section class="section">
+  <div class="container">
+    <h1 class="title"></h1>
+    <h2 class="subtitle">
+    </h2>
+  </div>
+</section>
+
+<section class="hero is-medium is-dark is-bold">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title" align="right">
+        Specjalizacje Kliniki
+      </h1>
+    </div>
+  </div>
+</section>
+
+<section class="container">
+  <div class="column" align="center" *ngFor="let spec of specs">
+    <div class="card">
+      <div class="card-image has-text-centered" style="font-size:120px; color: #6f767a;">
+        <img src="/assets/{{spec.name}}.jpg">
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h4>{{spec.name}}</h4>
+          <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque dignissim enim.
+            Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan lacus vel facilisis.</p>
+          <p>
+            <a href="../" class="button is-danger is-hovered is-fullwidth">{{spec.name}} - Sprawdź naszych specjalistów</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
