--- a/UwbProjekt-Angular/src/app/specs/specs.component.html
+++ b/UwbProjekt-Angular/src/app/specs/specs.component.html
@@ -13,7 +13,7 @@
 <section class="hero is-medium is-dark is-bold">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title" align="right">
+      <h1 class="title" align="center">
         Specjalizacje Kliniki
       </h1>
     </div>
@@ -32,7 +32,7 @@
           <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque dignissim enim.
             Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan lacus vel facilisis.</p>
           <p>
-            <a href="../" class="button is-danger is-hovered is-fullwidth">{{spec.name}} - Sprawdź naszych specjalistów</a>
+            <a routerLink="/specs/{{spec.id}}" class="button is-danger is-hovered is-fullwidth">Sprawdź naszych specjalistów</a>
           </p>
         </div>
       </div>
