--- a/UwbProjekt-Angular/src/app/header/header.component.html
+++ b/UwbProjekt-Angular/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item" routerLink="">
-                        <img src="http://www.thecliniccolorado.com/wp-content/uploads/2016/02/The_Clinic_ReverseLogo_DarkBlue_Stroke.png" alt="Logo">
+                        <img src="/assets/logo.png" alt="Logo">
                     </a>
                 </div>
                 <div id="navbarMenu" class="navbar-menu">
