--- a/UwbProjekt-Angular/src/app/login/login.component.css
+++ b/UwbProjekt-Angular/src/app/login/login.component.css
@@ -1,4 +1,9 @@
-.hero.is-success {
+html,body {
+    font-family: 'Open Sans', serif;
+    font-size: 14px;
+    font-weight: 300;
+  }
+  .hero.is-success {
     background: #F2F6FA;
   }
   .hero .nav, .hero.is-success .nav {
