--- a/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
+++ b/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
@@ -128,20 +128,107 @@
           </div>
         </div>
       </section>
-        <div class="column">
-          <div class="card events-card">
-            <header class="card-header">
-              <p class="card-header-title">
-                Działania
-              </p>
-            </header>
-            <div class="card-table">
-              <div class="content">
-                <h2> Content tutaj</h2>
-              </div>
+      <div class="column">
+        <div class="card events-card">
+          <header class="card-header">
+            <p class="card-header-title">
+              Działania
+            </p>
+          </header>
+          <div class="card-table">
+            <div class="content">
+              <h2> Content tutaj</h2>
             </div>
           </div>
         </div>
+      </div>
     </div>
   </div>
 </div>
+<div class="container">
+    <form [formGroup]="doctorForm" (ngSubmit)="onSubmit()">
+      <div class="column is-4">
+        <div class="field">
+          <label class="label">Pesel</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input" type="text" [(ngModel)]="doctor.countryId" placeholder="Wpisz pesel doktora">
+          </div>
+        </div>
+
+
+        <div class="field">
+          <label class="label">E-mail</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input " type="text" [(ngModel)]="doctor.email" placeholder="Wpisz E-mail">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Nazwisko</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input" type="text" [(ngModel)]="doctor.lastName" placeholder="Wpisz Nazwisko">
+          </div>
+        </div>
+        <div class="field">
+          <label class="label">Imie</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input" type="text" [(ngModel)]="doctor.firstName" placeholder="Wpisz Imie">
+          </div>
+        </div>
+        <div class="field">
+          <label class="label">Specjalizacja</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input" type="text" [(ngModel)]="this.specs.specName" placeholder="Wpisz specjalizacje">
+          </div>
+        </div>
+
+        <!--  <div class="field">
+      <label class="label">Wybierz specjalizacje</label>
+      <div class="control">
+        <div class="select">
+          <select>
+            <option>Wybierz</option>
+            <option>Alergologia</option>
+            <option>Kardiologia</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  -->
+        <div class="field">
+          <label class="label">Message</label>
+          <div class="control">
+            <textarea class="textarea" placeholder="Textarea"></textarea>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="control">
+            <label class="checkbox">
+              <input type="checkbox" [(ngModel)]='doctor.admin'> Nadać uprawnienia administratora?
+            </label>
+          </div>
+        </div>
+
+        <!-- <div class="field"> Nadać uprawnienia administratora?
+      <div class="control">
+        <label class="radio"> 
+          <input type="radio" name="question" [(ngModel)]="doctor.admin"> Tak
+        </label>
+        <label class="radio">
+          <input type="radio" name="question"> Nie
+        </label>
+      </div>
+    </div>
+  -->
+        <div class="field is-grouped">
+          <div class="control">
+            <button class="button is-primary" (click)="onSubmit()">Dodaj</button>
+          </div>
+          <div class="control">
+            <button routerLink='./' class="button is-text">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
