--- a/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
+++ b/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
@@ -145,44 +145,49 @@
     </div>
   </div>
 </div>
+
+
 <div class="container">
-    <form [formGroup]="doctorForm" (ngSubmit)="onSubmit()">
-      <div class="column is-4">
-        <div class="field">
-          <label class="label">Pesel</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="text" [(ngModel)]="doctor.countryId" placeholder="Wpisz pesel doktora">
-          </div>
+  <form (ngSubmit)="onSubmit()">
+    <div class="column is-4">
+      <div class="field">
+        <label class="label">Pesel</label>
+        <div class="control has-icons-left has-icons-right">
+          <input class="input" type="text" [(ngModel)]="model.countryId" placeholder="Pesel Lekarza" name="Pesel">
+
         </div>
+      </div>
 
 
-        <div class="field">
-          <label class="label">E-mail</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input " type="text" [(ngModel)]="doctor.email" placeholder="Wpisz E-mail">
-          </div>
+      <div class="field">
+        <label class="label">E-mail</label>
+        <div class="control has-icons-left has-icons-right">
+          <input class="input " type="text" [(ngModel)]="model.email" placeholder="E-mail" name="Email">
         </div>
+      </div>
 
-        <div class="field">
-          <label class="label">Nazwisko</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="text" [(ngModel)]="doctor.lastName" placeholder="Wpisz Nazwisko">
-          </div>
+      <div class="field">
+        <label class="label">Nazwisko</label>
+        <div class="control has-icons-left has-icons-right">
+          <input class="input" type="text" [(ngModel)]="model.lastName" placeholder="Nazwisko" name="Nazwisko">
         </div>
-        <div class="field">
-          <label class="label">Imie</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="text" [(ngModel)]="doctor.firstName" placeholder="Wpisz Imie">
-          </div>
+      </div>
+      <div class="field">
+        <label class="label">Imię</label>
+        <div class="control has-icons-left has-icons-right">
+          <input class="input" type="text" [(ngModel)]="model.firstName" placeholder="Imię" name="Imie">
         </div>
-        <div class="field">
-          <label class="label">Specjalizacja</label>
-          <div class="control has-icons-left has-icons-right">
-            <input class="input" type="text" [(ngModel)]="this.specs.specName" placeholder="Wpisz specjalizacje">
-          </div>
-        </div>
+      </div>
 
-        <!--  <div class="field">
+      
+      <div class="field">
+        <label class="label">Specjalizacja</label>
+        <div class="control has-icons-left has-icons-right">
+          <input class="input" type="text" [(ngModel)]="specModel.specName" placeholder="Wpisz specjalizacje" name="Specjalizacja">
+        </div>
+      </div> 
+
+      <!--  <div class="field">
       <label class="label">Wybierz specjalizacje</label>
       <div class="control">
         <div class="select">
@@ -195,40 +200,28 @@
       </div>
     </div>
   -->
-        <div class="field">
-          <label class="label">Message</label>
-          <div class="control">
-            <textarea class="textarea" placeholder="Textarea"></textarea>
-          </div>
-        </div>
 
-        <div class="field">
-          <div class="control">
-            <label class="checkbox">
-              <input type="checkbox" [(ngModel)]='doctor.admin'> Nadać uprawnienia administratora?
-            </label>
-          </div>
-        </div>
 
-        <!-- <div class="field"> Nadać uprawnienia administratora?
-      <div class="control">
-        <label class="radio"> 
-          <input type="radio" name="question" [(ngModel)]="doctor.admin"> Tak
-        </label>
-        <label class="radio">
-          <input type="radio" name="question"> Nie
-        </label>
+      <div class="field">
+        <div class="control">
+          <label class="checkbox">
+            <!--  <input type="checkbox" [(ngModel)]='doctor.admin'> Nadać uprawnienia administratora? -->
+
+            <input type="checkbox" (click)="clicked()" [checked]="checkbox" (change)="changed($event)" /> Nadać uprawnienia administratora?
+
+          </label>
+        </div>
+      </div>
+
+
+      <div class="field is-grouped">
+        <div class="control">
+          <button class="button is-primary">Dodaj</button>
+        </div>
+        <div class="control">
+          <button routerLink='./' class="button is-text">Cancel</button>
+        </div>
       </div>
     </div>
-  -->
-        <div class="field is-grouped">
-          <div class="control">
-            <button class="button is-primary" (click)="onSubmit()">Dodaj</button>
-          </div>
-          <div class="control">
-            <button routerLink='./' class="button is-text">Cancel</button>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
+  </form>
+</div>
