--- a/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
+++ b/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
@@ -1,144 +1,120 @@
-<nav class="navbar is-dark">
-  <div class="container">
-    <div class="navbar-brand">
-      <a class="navbar-item brand-text" href="../">
-        Powrót
-      </a>
-      <div class="navbar-burger burger" data-target="navMenu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-    <div id="navMenu" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" routerLink="">
-          Strona główna
-        </a>
-        <a class="navbar-item" href="admin.html">
-          Użytkownicy
-        </a>
-        <a class="navbar-item" href="admin.html">
-          Lekarze
-        </a>
-      </div>
-
-    </div>
-  </div>
-</nav>
-<!-- END NAV -->
+<br>
+<br>
 <div class="container">
   <div class="columns">
     <div class="column is-3">
       <aside class="menu">
         <p class="menu-label">
-          General
+          Główne
         </p>
         <ul class="menu-list">
           <li>
-            <a class="is-active">Dashboard</a>
-          </li>
-          <li>
-            <a>Customers</a>
+            <a href="/adminpanel" routerLinkActive="active" class="button is-danger is-medium">Panel Główny</a>
           </li>
         </ul>
         <p class="menu-label">
-          Administration
+          Lekarze
         </p>
         <ul class="menu-list">
           <li>
-            <a>Team Settings</a>
+            <a class="button is-dark is-medium" (click)="ShowButton()">Dodaj Lekarza</a>
+            <br>
           </li>
           <li>
-            <a>Invitations</a>
-          </li>
-          <li>
-            <a>Cloud</a>
-          </li>
-          <li>
-            <a>Authentication</a>
+            <a class="button is-dark is-medium">Lista Lekarzy</a>
+            <br>
           </li>
         </ul>
         <p class="menu-label">
-          Transactions
+          Użytkownicy
         </p>
         <ul class="menu-list">
           <li>
-            <a>Payments</a>
-          </li>
-          <li>
-            <a>Transfers</a>
-          </li>
-          <li>
-            <a>Balance</a>
+            <a class="button is-dark is-medium">Lista Użytkowników</a>
+            <br>
           </li>
         </ul>
+        <p class="menu-label">
+          Specjalizacje
+        </p>
+        <ul class="menu-list">
+          <li>
+            <a class="button is-dark is-medium">Dodaj Specjalizacje</a>
+            <br>
+          </li>
+        </ul>
+        <a class="button is-danger">Wyloguj</a>
       </aside>
     </div>
-    <div class="column is-9">
-      <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
-        <ul>
-          <li>
-            <a href="../">Link1</a>
-          </li>
-          <li>
-            <a href="../">Link2</a>
-          </li>
-          <li>
-            <a href="../">Link3</a>
-          </li>
-        </ul>
-      </nav>
-      <section class="hero is-info welcome is-small">
-        <div class="hero-body">
-          <div class="container">
-            <h1 class="title">
-              Panel Administratora
-            </h1>
-            <h2 class="subtitle">
-            </h2>
-          </div>
-        </div>
-      </section>
-      <section class="info-tiles">
-        <div class="tile is-ancestor has-text-centered">
-          <div class="tile is-parent">
-            <article class="tile is-child box">
-              <p class="title">439k</p>
-              <p class="subtitle">Users</p>
-            </article>
-          </div>
-          <div class="tile is-parent">
-            <article class="tile is-child box">
-              <p class="title">59k</p>
-              <p class="subtitle">Products</p>
-            </article>
-          </div>
-          <div class="tile is-parent">
-            <article class="tile is-child box">
-              <p class="title">3.4k</p>
-              <p class="subtitle">Open Orders</p>
-            </article>
-          </div>
-          <div class="tile is-parent">
-            <article class="tile is-child box">
-              <p class="title">19</p>
-              <p class="subtitle">Exceptions</p>
-            </article>
-          </div>
-        </div>
-      </section>
-      <div class="column">
-        <div class="card events-card">
-          <header class="card-header">
-            <p class="card-header-title">
-              Działania
-            </p>
-          </header>
-          <div class="card-table">
-            <div class="content">
-              <h2> Content tutaj</h2>
+    <div class="column">
+      <div class="card article">
+        <div class="card-content">
+          <section class="hero is-dark welcome is-small">
+            <div class="hero-body">
+              <div class="container">
+                <h1 class="title">
+                  Panel Administratora
+                </h1>
+                <h2 class="subtitle" s>
+                  <br>
+                </h2>
+              </div>
             </div>
+          </section>
+          <br>
+          <br>
+          <!-- DODAWANIE LEKARZA -->
+          <div *ngIf="showComponent">
+            <form (ngSubmit)="onSubmit()">
+              <div class="column is-4">
+                <div class="field">
+                  <label class="label">Pesel</label>
+                  <div class="control has-icons-left has-icons-right">
+                    <input class="input" type="text" [(ngModel)]="model.countryId" placeholder="Pesel Lekarza" name="Pesel">
+
+                  </div>
+                </div>
+                <div class="field">
+                  <label class="label">E-mail</label>
+                  <div class="control has-icons-left has-icons-right">
+                    <input class="input " type="text" [(ngModel)]="model.email" placeholder="E-mail" name="Email">
+                  </div>
+                </div>
+                <div class="field">
+                  <label class="label">Nazwisko</label>
+                  <div class="control has-icons-left has-icons-right">
+                    <input class="input" type="text" [(ngModel)]="model.lastName" placeholder="Nazwisko" name="Nazwisko">
+                  </div>
+                </div>
+                <div class="field">
+                  <label class="label">Imię</label>
+                  <div class="control has-icons-left has-icons-right">
+                    <input class="input" type="text" [(ngModel)]="model.firstName" placeholder="Imię" name="Imie">
+                  </div>
+                </div>
+                <div class="field">
+                  <label class="label">Specjalizacja</label>
+                  <div class="control has-icons-left has-icons-right">
+                    <input class="input" type="text" [(ngModel)]="specModel.specName" placeholder="Wpisz specjalizacje" name="Specjalizacja">
+                  </div>
+                </div>
+                <div class="field">
+                  <div class="control">
+                    <label class="checkbox">
+                      <input type="checkbox" (click)="clicked()" [checked]="checkbox" (change)="changed($event)" /> Nadać uprawnienia administratora?
+                    </label>
+                  </div>
+                </div>
+                <div class="field is-grouped">
+                  <div class="control">
+                    <button class="button is-primary">Dodaj</button>
+                  </div>
+                  <div class="control">
+                    <button routerLink='./' class="button is-text">Cancel</button>
+                  </div>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -146,64 +122,3 @@
   </div>
 </div>
 
-<div class="container">
-  <form (ngSubmit)="onSubmit()">
-    <div class="column is-4">
-      <div class="field">
-        <label class="label">Pesel</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input" type="text" [(ngModel)]="model.countryId" placeholder="Pesel Lekarza" name="Pesel">
-
-        </div>
-      </div>
-
-
-      <div class="field">
-        <label class="label">E-mail</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input " type="text" [(ngModel)]="model.email" placeholder="E-mail" name="Email">
-        </div>
-      </div>
-
-      <div class="field">
-        <label class="label">Nazwisko</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input" type="text" [(ngModel)]="model.lastName" placeholder="Nazwisko" name="Nazwisko">
-        </div>
-      </div>
-      <div class="field">
-        <label class="label">Imię</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input" type="text" [(ngModel)]="model.firstName" placeholder="Imię" name="Imie">
-        </div>
-      </div>
-
-
-      <div class="field">
-        <label class="label">Specjalizacja</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input" type="text" [(ngModel)]="specModel.specName" placeholder="Wpisz specjalizacje" name="Specjalizacja">
-        </div>
-      </div>
-
-      <div class="field">
-        <div class="control">
-          <label class="checkbox">
-            <input type="checkbox" (click)="clicked()" [checked]="checkbox" (change)="changed($event)" /> Nadać uprawnienia administratora?
-
-          </label>
-        </div>
-      </div>
-
-
-      <div class="field is-grouped">
-        <div class="control">
-          <button class="button is-primary">Dodaj</button>
-        </div>
-        <div class="control">
-          <button routerLink='./' class="button is-text">Cancel</button>
-        </div>
-      </div>
-    </div>
-  </form>
-</div>
