--- a/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
+++ b/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
@@ -17,11 +17,11 @@
         </p>
         <ul class="menu-list">
           <li>
-            <a class="button is-dark is-medium" (click)="ShowButton()">Dodaj Lekarza</a>
+            <a class="button is-dark is-medium" (click)="addDoctorEnable()">Dodaj Lekarza</a>
             <br>
           </li>
           <li>
-            <a class="button is-dark is-medium">Lista Lekarzy</a>
+            <a class="button is-dark is-medium" (click)="showDoctorsEnable()">Lista Lekarzy</a>
             <br>
           </li>
         </ul>
@@ -39,7 +39,7 @@
         </p>
         <ul class="menu-list">
           <li>
-            <a class="button is-dark is-medium">Dodaj Specjalizacje</a>
+            <a class="button is-dark is-medium" (click)="addSpecEnable()">Dodaj Specjalizacje</a>
             <br>
           </li>
         </ul>
@@ -64,7 +64,7 @@
           <br>
           <br>
           <!-- DODAWANIE LEKARZA -->
-          <div *ngIf="showComponent">
+          <div *ngIf="showAddDoctor">
             <form (ngSubmit)="onSubmit()">
               <div class="column is-4">
                 <div class="field">
@@ -116,9 +116,54 @@
               </div>
             </form>
           </div>
+          <!-- CREATE SPEC -->
+
+          <div *ngIf="showAddSpec">
+            <form (ngSubmit)="onSpecSubmit()">
+              <div class="column is-4">
+                <div class="field">
+                  <label class="label">Specjalizacja</label>
+                  <div class="control has-icons-left has-icons-right">
+                    <input class="input" type="text" [(ngModel)]="specModel.specName" placeholder="Wpisz specjalizacje" name="Specjalizacja">
+                  </div>
+                </div>
+                <div class="field is-grouped">
+                  <div class="control">
+                    <button class="button is-primary">Dodaj</button>
+                  </div>
+                  <div class="control">
+                    <button routerLink='./' class="button is-text">Cancel</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!--  GET DOCTORS   -->
+          <div *ngIf="showDoctors">
+            <h1>Lekarze dostępni w</h1>
+            <table class="table is fullwidth is-striped">
+              <thead class="thead">
+                <th>Imię</th>
+                <th>Nazwisko</th>
+                <th>E-mail</th>
+                <th>Szczegóły</th>
+              </thead>
+              <tbody *ngFor="let doctor of doctors">
+                <tr>
+                  <td width="10%">{{doctor.firstName}}</td>
+                  <td width="10%">{{doctor.lastName}}</td>
+                  <td width="10%">{{doctor.email}}</td>
+                  <td>
+                    <a class="button is-small is-primary" href="#">Przejdź</a>
+                  </td>
+                  <br>
+                  <br>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
