Added Doctor-Details + routing

--- a/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
+++ b/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
@@ -169,7 +169,7 @@
                   <td width="10%">{{doctor.lastName}}</td>
                   <td width="10%">{{doctor.email}}</td>
                   <td>
-                    <a class="button is-small is-primary" href="#">Przejdź</a>
+                    <a class="button is-small is-primary" routerLink='/doctors/{{doctor.id}}'>Przejdź</a>
                   </td>
                   <br>
                   <br>
