--- a/UwbProjekt-Angular/src/app/doctors/doctor-details/doctor-details.component.html
+++ b/UwbProjekt-Angular/src/app/doctors/doctor-details/doctor-details.component.html
@@ -1,16 +1,7 @@
-<section class="container">
-  <div class="column" align="center" *ngFor="let doctor of doctors">
-    <div class="card">
-      <div class="card-content">
-        <div class="content">
-          <h4>{{doctor.name}}</h4>
-          <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque dignissim enim.
-            Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan lacus vel facilisis.</p>
-          <p>
-            <a routerLink="/doctors/{{doctor.id}}" class="button is-danger is-hovered is-fullwidth">Sprawdź doktora</a>
-          </p>
-        </div>
-      </div>
-    </div>
+<div *ngIf="doctor">
+  <h2>{{ doctor.firstName}} {{doctor.lastName}}</h2>
+  <div>
+    <span>id: </span>{{doctor.id}}</div>
+  <div>
   </div>
-</section>
+</div>
