--- a/UwbProjekt-Angular/src/app/user-panel/user-panel.component.html
+++ b/UwbProjekt-Angular/src/app/user-panel/user-panel.component.html
@@ -1,3 +1,116 @@
-<p>
-  user-panel works!
-</p>
+<br>
+<br>
+<div class="container">
+  <div class="columns">
+    <div class="column is-3">
+      <aside class="menu">
+        <p class="menu-label">
+          Główne
+        </p>
+        <ul class="menu-list">
+          <li>
+            <a href="/userpanel" routerLinkActive="active" class="button is-primary is-medium">Moje konto</a>
+          </li>
+        </ul>
+        <p class="menu-label">
+          Wizyty
+        </p>
+        <ul class="menu-list">
+          <li>
+            <br>
+            <a class="button is-dark is-medium" routerLink="/specs">Zarezerwuj wizytę</a>
+          </li>
+          <li>
+            <br>
+            <a class="button is-dark is-medium" (click)="showAppointmentsEnable()">Wyświetl moje wizyty</a>
+          </li>
+        </ul>
+        <p class="menu-label">
+          Lekarze
+        </p>
+        <ul class="menu-list">
+          <li>
+
+            <a class="button is-dark is-medium" (click)="showDoctorsEnable()">Wyświetl lekarzy</a>
+          </li>
+        </ul>
+        <br>
+        <a class="button is-danger">Wyloguj</a>
+      </aside>
+    </div>
+    <div class="column">
+      <div class="card article">
+        <div class="card-content">
+          <section class="hero is-dark welcome is-small">
+            <div class="hero-body">
+              <div class="container">
+                <h1 class="title">
+                  <i class="fa fa-user-circle"></i>
+                  Panel Użytkownika
+                </h1>
+                <h2 class="subtitle" s>
+                  <br>
+                </h2>
+              </div>
+            </div>
+          </section>
+          <br>
+          <br>
+          <!--  GET DOCTORS   -->
+          <div *ngIf="showDoctors">
+            <section class="hero is-dark is-bold is-small promo-block">
+              <div class="hero-body">
+                <div class="container">
+                  <h1 class="title">
+                    <i class="fa fa-heartbeat"></i>
+                    Specjaliści Kliniki
+                  </h1>
+                  <h2 class="subtitle">
+                  </h2>
+                </div>
+              </div>
+            </section>
+            <br>
+            <table class="table is fullwidth is-striped">
+              <thead class="thead">
+                <th>Imię</th>
+                <th>Nazwisko</th>
+                <th>E-mail</th>
+                <th>Szczegóły</th>
+              </thead>
+              <tbody *ngFor="let doctor of doctors">
+                <tr>
+                  <td width="10%">{{doctor.firstName}}</td>
+                  <td width="10%">{{doctor.lastName}}</td>
+                  <td width="10%">{{doctor.email}}</td>
+                  <td>
+                    <a class="button is-small is-primary" routerLink='/doctors/{{doctor.id}}'>Przejdź</a>
+                  </td>
+                  <br>
+                  <br>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!--  WYŚWIETLANIE WIZYT  -->
+          <div *ngIf="showAppointments">
+            <section class="hero is-dark is-bold is-small promo-block">
+              <div class="hero-body">
+                <div class="container">
+                  <h1 class="title">
+                    <i class="fa fa-thumb-tack"></i>
+                    Aktualnie zarezerwowane wizyty
+                  </h1>
+                  <h2 class="subtitle">
+                  </h2>
+                </div>
+              </div>
+            </section>
+            <br>
+            <h1>Kalendarz</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
