--- a/UwbProjekt-Angular/src/app/register/register.component.html
+++ b/UwbProjekt-Angular/src/app/register/register.component.html
@@ -42,7 +42,7 @@
                             />
                         </div>
                         <div class="control">
-                            <button routerLink='./' class="button is-black is-danger is-large">Anuluj</button>
+                            <button routerLink='/' class="button is-black is-danger is-large">Anuluj</button>
                         </div>
                     </div>
                 </div>
