--- a/UwbProjekt-Angular/src/app/specdetails/specdetails.component.html
+++ b/UwbProjekt-Angular/src/app/specdetails/specdetails.component.html
@@ -19,8 +19,8 @@
         </h2>
         <br>
         <p class="has-text-centered">
-          <a href='dologinu' class="button is-medium is-info is-outlined">
-            Zarezerwuj wizytę! ( tu ref do loginu/rejestracji może?)
+          <a href='/doctors/{{doctor.id}}' class="button is-medium is-info is-outlined">
+            Zarezerwuj wizytę!
           </a>
         </p>
       </div>
