--- a/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
+++ b/UwbProjekt-Angular/src/app/admin-panel/admin-panel.component.html
@@ -188,26 +188,7 @@
                   </div>
                 </section>
                 <br>
-            <table class="table is fullwidth is-striped">
-              <thead class="thead">
-                <th>Imię</th>
-                <th>Nazwisko</th>
-                <th>E-mail</th>
-                <th>Szczegóły</th>
-              </thead>
-              <tbody *ngFor="let doctor of doctors">
-                <tr>
-                  <td width="10%">{{doctor.firstName}}</td>
-                  <td width="10%">{{doctor.lastName}}</td>
-                  <td width="10%">{{doctor.email}}</td>
-                  <td>
-                    <a class="button is-small is-primary" routerLink='/doctors/{{doctor.id}}'>Przejdź</a>
-                  </td>
-                  <br>
-                  <br>
-                </tr>
-              </tbody>
-            </table>
+            <app-doctors></app-doctors>
           </div>
           <!--  GET USERS   -->
           <div *ngIf="showUsers">
@@ -224,23 +205,7 @@
                   </div>
                 </section>
                 <br>
-            <table class="table is fullwidth is-striped">
-              <thead class="thead">
-                <th>Imię</th>
-                <th>Nazwisko</th>
-                <th>E-mail</th>
-                <th>Szczegóły</th>
-              </thead>
-              <tbody *ngFor="let user of users">
-                <tr>
-                  <td width="10%">{{user.firstName}}</td>
-                  <td width="10%">{{user.lastName}}</td>
-                  <td width="10%">{{user.email}}</td>
-                  <br>
-                  <br>
-                </tr>
-              </tbody>
-            </table>
+            <app-users></app-users> 
           </div>
         </div>
       </div>
